Wed Jul 25 17:41:05 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c, rational.c: compatible marshal loader for compatibilities
	  with 1.8.  [ruby-core:45775] [Bug #6625]

Wed Jul 25 17:17:05 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* atomic.h: prefer GCC atomic builtins than Windows APIs, if possible,
	  since they are generic.

Wed Jul 25 11:16:57 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/net/.document:  Removed.  All files in net/ should be included in
	  RDoc.

Wed Jul 25 10:00:23 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/testunit/test_redefinition.rb: broken class/method names.

Wed Jul 25 09:26:32 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/cgi/html.rb: Use << instead of +=.
	  `a += b` is syntax sugar of `a = a + b`; it creates a new string
	  object. `a << b` is concatenation and doesn't create new object.

Wed Jul 25 09:16:26 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/cgi/html.rb (element_init): suppress redefine warning.
	  Don't define methods if they are already defined.

Wed Jul 25 09:05:38 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/net/http.rb:  Added SSL session reuse across connections for a
	  single instance to speed up connection.  [Feature #5341]
	* NEWS:  ditto
	* test/net/http/test_https.rb:  Tests for #5341

Wed Jul 25 06:54:24 2012  Eric Hodel  <drbrain@segment7.net>

	* doc/re.rdoc:  Fix spelling

Wed Jul 25 06:49:12 2012  Eric Hodel  <drbrain@segment7.net>

	* re.c (rb_reg_s_last_match):  Update $~ to reference Regexp
	  documentation about "special global variables".  [Bug #6723]

Wed Jul 25 06:28:56 2012  Eric Hodel  <drbrain@segment7.net>

	* iseq.c:  Added documentation.  Patch by David Albert.  [Bug #6785]

Wed Jul 25 03:05:06 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* parse.y: added symbols and qsymbols productions for %i and %I
	  support. %i{ .. } returns a list of symbols without interpolation,
	  %I{ .. } returns a list of symbols with interpolation.  Thanks to