@@ -562,7 +562,7 @@ thread_create_core(VALUE thval, VALUE args, VALUE (*fn)(ANYARGS))
     th->priority = current_th->priority;
     th->thgroup = current_th->thgroup;
 
-    th->async_errinfo_queue = rb_ary_new();
+    th->async_errinfo_queue = rb_ary_tmp_new(0);
     th->async_errinfo_queue_checked = 0;
     th->async_errinfo_mask_stack = rb_ary_dup(current_th->async_errinfo_mask_stack);
 
@@ -5123,9 +5123,10 @@ Init_Thread(void)
 	    gvl_acquire(th->vm, th);
 	    native_mutex_initialize(&th->interrupt_lock);
 
-	    th->async_errinfo_queue = rb_ary_new();
+	    th->async_errinfo_queue = rb_ary_tmp_new(0);
 	    th->async_errinfo_queue_checked = 0;
-	    th->async_errinfo_mask_stack = rb_ary_new();
+	    th->async_errinfo_mask_stack = rb_ary_tmp_new(0);
+	    RBASIC(th->async_errinfo_mask_stack)->klass = 0;
 	}
     }
 
